# base_project

./: CMakeLists.txt  CustomConsole.cpp  CustomConsole.h  NotesPlanning  base_project.cpp  base_project.h  reminder.txt
Objects/2DGUI/: Window.cpp  Window.h  windowParams.h
Services/: WindowManagementService.cpp  WindowManagementService.h
